--- a/chamados_geral/templates/chamados/admin3.html
+++ b/chamados_geral/templates/chamados/admin3.html
@@ -150,7 +150,7 @@ div.botao{
 <br>
 <br>
 <div style="text-align: center;" class="container titulo" >
-    <h5 class="text-uppercase font-weight-light text-monospace">Gerenciamento de chamados</h5>
+    <h5 class="text-uppercase font-weight-light text-monospace">Gerenciamento de chamados internos</h5>
 </div>
 <br>
 <br>
