--- a/chamados_geral/templates/base.html
+++ b/chamados_geral/templates/base.html
@@ -79,7 +79,7 @@ footer{
     left:0;
     margin-top: 70px;
     width: 100%;
-  
+    height: 168px;
 }
 
     </style>
@@ -103,10 +103,9 @@ footer{
                                 <a style="color: #fff;" class="nav-link text-uppercase font-weight-light text-monospace">Sistema de chamados internos!</span></a>
                             </li>
                             
-                         
 
                             <li class="nav-item">
-                                <a style="color: #fff;" class="nav-link text-uppercase font-weight-light text-monospace" href="admin3/">Admin</a>
+                                <a style="color: #fff;" class="nav-link text-uppercase font-weight-light text-monospace" href="http://127.0.0.1:8000/admin/">Admin</a> <!--admin3/-->
                                
                             </li>
                               <!--Url de logout abaixo-->
