--- a/chamados_geral/templates/chamados/list.html
+++ b/chamados_geral/templates/chamados/list.html
@@ -219,6 +219,7 @@ div.botao{
             <tr> 
                 <!--<th style="text-align: center;" >Solicitante</th>-->
                 <th style="text-align: center;" >Data</th>
+                <th style="text-align: center;" >Atualizado em</th>
                 <th style="text-align: center;" >Título</th>
                 <th style="text-align: center;" >Descrição</th>
                 <th style="text-align: center;" >Status</th>
@@ -247,6 +248,7 @@ div.botao{
             <tr>
                 
                 <td style="text-align: center;" >{{chamado.created_at}}</td>
+                <td style="text-align: center;" >{{chamado.updated_at}}</td>
                 <td style="text-align: center;" >{{chamado.Título}}</td>
                 <td style="text-align: center;" >{{chamado.Descrição}}</td>
                 <td style="text-align: center;" >{{chamado.Status}}</a></td>
