--- a/chamados_geral/templates/chamados/admin3.html
+++ b/chamados_geral/templates/chamados/admin3.html
@@ -197,6 +197,7 @@ div.botao{
             <tr> 
                 <th style="text-align: center;" >Solicitante</th>
                 <th style="text-align: center;" >Data</th>
+                <th style="text-align: center;" >Atualizado em</th>
                 <th style="text-align: center;" >Título</th>
                 <th style="text-align: center;" >Descrição</th>
                 <th style="text-align: center;" >Status</th>
@@ -225,6 +226,7 @@ div.botao{
             <tr>
                 <td style="text-align: center;" >{{chamado.user}}</td>
                 <td style="text-align: center;" >{{chamado.created_at}}</td>
+                <td style="text-align: center;" >{{chamado.updated_at}}</td>
                 <td style="text-align: center;" >{{chamado.Título}}</td>
                 <td style="text-align: center;" >{{chamado.Descrição}}</td>
                 <td style="text-align: center;" >{{chamado.Status}}</a></td>
@@ -233,7 +235,6 @@ div.botao{
                     <a href="/edit2/{{chamado.id}}" ><button type="button" class="btn btn-primary"><i class="fas fa-pencil-alt"></i></button></a>
                 </td>
                
-
             </tr>
 
             {% endfor %}
