--- a/chamados_geral/templates/chamados/chamadosGerais.html
+++ b/chamados_geral/templates/chamados/chamadosGerais.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Chamados gerais{% endblock %}
 
 {% block content %}
-
 
 <style>
 
